# poetry_starter

./: Makefile  README.md  pyproject.toml  pyrightconfig.json
foo_starter/: main.py
