[tool.poetry]
name = "foo-starter"
version = "0.1.0"
description = ""
authors = ["chenli13 <chenli13@asiainfo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
